# fema-nfhl-flood-hazard-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: example_config.yaml
docs/: limitations.md  methodology.md
notebooks/: 01_demo_nfhl_pipeline.ipynb
notebooks/00_original/: FEMA_NFHL_download.ipynb  analyze_FEMA_flood_maps.ipynb
outputs/sample/: README.md  floodplain_area_summary_sample.csv  nfhl_catalog_sample.csv  validation_report_sample.csv
scripts/: run_county_nfhl_map.ps1  run_county_nfhl_map.sh
src/fema_nfhl/: __init__.py  case_study.py  catalog.py  cli.py  county_lookup.py  download.py  exposure.py  extract.py  map_export.py  mapping.py  transform.py  utils.py  validate.py  visualize.py  workflow.py
tests/: test_alameda_case_study.py  test_case_study.py  test_county_lookup.py  test_download.py  test_exposure.py  test_map_export.py  test_mapping.py  test_validate.py  test_visualize.py  test_workflow.py
